<resources>
    <string name="app_name">First Responder</string>
    <string name="start_title1">Καλωσήρθατε</string>
    <string name="start_title2">στο First Responder!</string>
    <string name="start_title3">Μία εφαρμογή για εθελοντές διασώστες.</string>
    <string name="start_button">Σύνδεση ή Εγγραφή</string>
    <string name="settings_name">Όνομα</string>
    <string name="settings_surname">Επώνυμο</string>
    <string name="settings_phoneNumber">Αριθμός Τηλεφώνου</string>
    <string name="settings_knownSkills">Γνωστές Δεξιότητες</string>
    <string name="settings_heavyBleeding_checkbox">Ξέρω να σταματήσω τη βαριά αιμορραγία</string>
    <string name="settings_cpr_checkbox">Ξέρω να εκτελέσω κυκλική αναπνοή - CPR</string>
    <string name="settings_treatShock_checkbox">Ξέρω να αντιμετωπίσω το σοκ</string>
    <string name="settings_aed_checkbox">Ξέρω να χρησιμοποιώ έναν απινιδωτή</string>
    <string name="settings_SaveChanges_Button">Αποθήκευση αλλαγών</string>
    <string name="logIn_title">Πληκτρολόγησε τον αριθμό του τηλεφώνου σου!</string>
    <string-array name="logIn_code">
        <item>+30</item>
    </string-array>
    <string name="logIn_pN">Αριθμός Τηλεφώνου</string>
    <string name="logIn_tos">
        Πατώντας «Επαλήθευση αριθμού τηλεφώνου», δηλώνετε ότι αποδέχεστε τους Όρους Παροχής
        Υπηρεσιών και την Πολιτική Απορρήτου. Ένα SMS μπορεί να σταλεί.
        \nΕνδέχεται να ισχύουν χρεώσεις μηνυμάτων και δεδομένων.
    </string>
    <string name="code_hint">Κωδικός Επιβεβαίωσης</string>
    <string name="logIn_button">Επαλήθευση αριθμού τηλεφώνου</string>
    <string name="phoneCode_title">Εισάγετε τον κωδικό επαλήθευσης!</string>
    <string name="phoneCode_button">Υποβολή κωδικού</string>
    <string name="register_title1">Ολοκληρώστε το προφίλ σας!</string>
    <string name="register_fname">Όνομα</string>
    <string name="register_lname">Επώνυμο</string>
    <string name="register_title2">Πείτε μας για τις δεξιότητές σας!</string>
    <string name="register_skill1">Ξέρω να σταματήσω τη βαριά αιμορραγία</string>
    <string name="register_skill2">Ξέρω να αντιμετωπίσω το σοκ</string>
    <string name="register_skill3">Ξέρω να εκτελέσω κυκλική αναπνοή - CPR</string>
    <string name="register_skill4">Ξέρω να χρησιμοποιώ έναν απινιδωτή</string>
    <string name="register_button">Δημιουργήστε τον λογαριασμό σας</string>
    <string name="alertDetails_text">Lorem ipsum dolor sit amet, id inani vituperatoribus quo.
        Assum equidem eligendi eam te, in qui singulis recteque. Altera dissentias est at.
        No minimum tacimates vix, eam erant aliquam ullamcorper id, sit ea prima dicam platonem.
        Sumo rebum democritum ut duo. Liber doming definiebas cum et. In assueverit necessitatibus pri.
        Quem doctus est ne.
        His amet definiebas temporibus ex, magna eripuit blandit eam eu.
         No verear delicatissimi quo, diceret maiorum democritum sed eu.
        Est option graecis rationibus id, nisl inani delenit te has.
        Cum in eros posse, nemore antiopam accusamus no duo, ius an eros tritani probatus.
        Expetenda mnesarchum eum ad.
        Bonorum mentitum iracundia id vim, quidam epicurei vim ei.
        Summo doming oblique eu qui, sumo exerci option mei ex.
        Illum urbanitas persequeris ad pro, ad nulla facilisis qualisque qui.
        Eos ex offendit scaevola pertinax, per an delenit vituperatoribus.
        Eu tritani percipit menandri vix. Quo at agam legere appellantur.
        Te impetus officiis luptatum pro, pri et eruditi tincidunt.
        Equidem copiosae et sed, apeirian deserunt has id, viris causae tritani no per.
        Ei mea ridens vidisse eleifend, ea qui accumsan officiis.
        Solet affert vocent duo in, at iuvaret consulatu comprehensam sed.
        Euismod euripidis assueverit eam in, et mei porro assum.
        Ex ludus accusata mei, at graeco tibique electram has.
        Eius primis ut duo, ea postea appareat invidunt pri.
        Est at legimus voluptaria, prima ignota an sit.
    </string>
    <string name="dashboard">Γεια σου</string>
    <string name="aboutUs">
        Η εφαρμογή αυτή φτιάχτηκε στο πλαίσιο του μαθήματος «Ανάπτυξη Εφαρμογών Κινητών Συσκευών»
        του τμήματος Πληροφορικής του ΑΠΘ. Οι φοιτητές που κατασκεύασαν την παρούσα εφαρμογή είναι
        οι Δημήτριος Παντελεήμων Γιακάτος, Κωνσταντίνος Σταυράτης και Θεμιστοκλής Χατζηεμμανουήλ.
    </string>
    <string name="menu1">Σχετικά με εμάς</string>
    <string name="menu2">Ρυθμίσεις</string>
    <string name="menu3">Αποσύνδεση</string>
    <string name="alert_address">Διεύθυνση:</string>
    <string name="alert_time">Προσδοκώμενος χρόνος</string>
    <string name="alert1">Βαριά αιμορραγία</string>
    <string name="alert2">Σοκ</string>
    <string name="alert3">Κυκλική αναπνοή - CPR</string>
    <string name="alert4">Απινιδωτής</string>
    <string name="alert_more">Λεπτομέρειες</string>
    <string name="alert_maps">Προβολή διαδρομής</string>
    <string name="alert_accept">Αποδοχή</string>
    <string name="alert_reject">Απόρριψη</string>
    <string name="alert_yes">ΝΑΙ</string>
    <string name="alert_no">ΟΧΙ</string>
</resources>