<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertActivity">

    <android.widget.ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-151dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mission_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/estimated_time_text_Text_View"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/alert_time"
                android:textSize="18sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/estimated_time_value_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alert_address" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/alert1"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/heavy_bleeding_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/estimated_time_text_Text_View" />

            <RadioGroup
                android:id="@+id/heavy_bleeding_radio_group"
                android:layout_width="145dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/estimated_time_value_text">

                <RadioButton
                    android:id="@+id/heavy_bleeding_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_yes" />

                <RadioButton
                    android:id="@+id/heavy_bleeding_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_no" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/alert2"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/treat_shock_radio_group"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <RadioGroup
                android:id="@+id/treat_shock_radio_group"
                android:layout_width="145dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/heavy_bleeding_radio_group">

                <RadioButton
                    android:id="@+id/treat_shock_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_yes" />

                <RadioButton
                    android:id="@+id/treat_shock_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_no" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/cpr_radio_group"
                android:layout_width="145dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/treat_shock_radio_group">

                <RadioButton
                    android:id="@+id/cpr_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_yes" />

                <RadioButton
                    android:id="@+id/cpr_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_no" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/aed_radio_group"
                android:layout_width="145dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/cpr_radio_group">

                <RadioButton
                    android:id="@+id/aed_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_yes" />

                <RadioButton
                    android:id="@+id/aed_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_no" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/alert3"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/cpr_radio_group"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/alert4"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/aed_radio_group"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <Button
                android:id="@+id/alert_details_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:text="@string/alert_more"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <Button
                android:id="@+id/button_accept_mission"
                android:layout_width="145dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/accept_mission_button"
                android:text="@string/alert_accept"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_reject_mission"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alert_maps"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/button_reject_mission"
                android:layout_width="145dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/reject_misson_button"
                android:text="@string/alert_reject"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_accept_mission"
                app:layout_constraintTop_toBottomOf="@+id/alert_maps"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/estimated_time_value_text"
                android:layout_width="145dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/estimated_time_text_Text_View"
                app:layout_constraintTop_toBottomOf="@+id/alert_address" />

            <Button
                android:id="@+id/alert_maps"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:text="@string/alert_maps"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alert_details_button" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/alert_address"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alert_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </android.widget.ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>